Implemented BodyContains and ResponsePredicate